@@ -1,5 +1,10 @@
 2024-11-03  Ulrich Müller  <ulm@gentoo.org>
 
+	* ebuild-mode.el (ebuild-mode-get-completion-function):
+	(ebuild-mode-get-keywords, ebuild-mode-unescape-string):
+	* test/ebuild-mode-tests.el (ebuild-mode-test-unescape-string):
+	Delete XEmacs 21.4 compatibility code.
+
 	* ebuild-mode.el (ebuild-mode-time-string): Delete compatibility
 	function for XEmacs 21.4.
 	(ebuild-mode-update-copyright, ebuild-mode-insert-skeleton)
